--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,10 @@ include_directories(
 
 
 add_executable(qm
-	src/gui/qm_gui.cpp src/gui/qm_gui.h src/gui/recent.h
+	src/gui/qm_gui.cpp src/gui/qm_gui.h
 	src/gui/components.cpp src/gui/components.h
+	src/gui/settings.cpp src/gui/settings.h
+	src/gui/recent.h src/gui/types.h
 	src/lib/math_algos.h src/lib/math_conts.h src/lib/math_concepts.h
 	src/lib/qm_algos.h
 )
