--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ add_executable(qm
 	src/gui/components.cpp src/gui/components.h
 	src/gui/components_table.cpp src/gui/components_table.h
 	src/gui/component_properties.cpp src/gui/component_properties.h
+	src/gui/component_operator.cpp src/gui/component_operator.h
 	src/gui/settings.cpp src/gui/settings.h
 	src/gui/globals.cpp src/gui/globals.h
 	src/gui/about.cpp src/gui/about.h
