--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@
 project(qm)
 cmake_minimum_required(VERSION 3.0)
 
+
 enable_language(CXX)
 set(CMAKE_CXX_STANDARD 20)
 #set(CMAKE_VERBOSE_MAKEFILE True)
@@ -15,15 +16,30 @@ set(CMAKE_CXX_STANDARD 20)
 add_compile_options(-std=c++20)
 add_compile_options(-Wall -Wextra -Weffc++)
 
+
+# see: https://cmake.org/cmake/help/latest/module/FindBoost.html
 find_package(Boost REQUIRED COMPONENTS system filesystem)
 add_compile_options(${Boost_CXX_FLAGS})
+
 
 find_package(Qt5Core REQUIRED)
 find_package(Qt5Gui REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Svg REQUIRED)
+
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
+
+if(TARGET Qt6::Core)
+	message(NOTICE "Using Qt 6.")
+	list(APPEND QtTargets Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Svg)
+elseif(TARGET Qt5::Core)
+	message(NOTICE "Using Qt 5.")
+	list(APPEND QtTargets Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Svg)
+endif()
+
+
+message(VERBOSE "libdl: ${CMAKE_DL_LIBS}.")
 
 
 include_directories(
@@ -53,7 +69,9 @@ add_executable(qm
 	src/lib/qm_algos.h
 )
 
+
 target_link_libraries(qm
-	Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Svg
-	${Boost_LIBRARIES}
+	${QtTargets}
+	Boost::system Boost::filesystem
+	${CMAKE_DL_LIBS}
 )
